quick fallback for the doc search since we overpassed algolia ratio