@@ -15,34 +15,30 @@
  */
 package org.talend.runtime.documentation;
 
-import static com.algolia.search.Defaults.ALGOLIANET_COM;
-import static com.algolia.search.Defaults.ALGOLIA_NET;
-import static java.util.Arrays.asList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonList;
+import static java.util.Comparator.comparing;
 import static java.util.Optional.of;
 import static java.util.Optional.ofNullable;
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.toList;
 import static lombok.AccessLevel.PRIVATE;
 
+import java.io.File;
 import java.io.IOException;
-import java.net.URL;
+import java.io.OutputStream;
+import java.nio.file.Files;
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.TimeZone;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
-import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.Supplier;
+import java.util.stream.Collector;
 import java.util.stream.IntStream;
 
 import javax.json.Json;
@@ -50,22 +46,12 @@ import javax.json.JsonArrayBuilder;
 import javax.json.JsonBuilderFactory;
 import javax.json.JsonObject;
 import javax.json.JsonObjectBuilder;
-import javax.json.JsonValue;
-
-import com.algolia.search.APIClient;
-import com.algolia.search.ApacheAPIClientBuilder;
-import com.algolia.search.Index;
-import com.algolia.search.exceptions.AlgoliaException;
-import com.algolia.search.objects.IndexSettings;
-import com.fasterxml.jackson.core.JsonGenerator;
-import com.fasterxml.jackson.databind.DeserializationFeature;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
+import javax.json.bind.Jsonb;
+import javax.json.bind.JsonbBuilder;
 
 import crawlercommons.sitemaps.SiteMap;
 import crawlercommons.sitemaps.SiteMapParser;
 
-import org.apache.commons.codec.digest.DigestUtils;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
@@ -78,36 +64,38 @@ import lombok.extern.slf4j.Slf4j;
 // this impl is not sexy but way faster!
 @Slf4j
 @NoArgsConstructor(access = PRIVATE)
-public class AlgoliaIndexation {
+public class SearchIndexation {
 
     /**
-     * Inputs:
+     * Input:
      * <ul>
      * <li>0: sitemap.xml location</li>
-     * <li>1: applicationId</li>
-     * <li>2: apiKey</li>
      * </ul>
      *
      * @param args the inputs.
      */
     public static void main(final String[] args) throws Exception {
-        System.setProperty("networkaddress.cache.ttl", "60");
-
         final JsonBuilderFactory factory = Json.createBuilderFactory(emptyMap());
 
-        final SiteMap siteMap = SiteMap.class.cast(
-                new SiteMapParser(false /* we index a local file with remote urls */).parseSiteMap(new URL(args[0])));
+        final File siteMapFile = new File(args[0]);
+        final String urlMarker = "/component-runtime/";
+        final SiteMap siteMap = SiteMap.class.cast(new SiteMapParser(false /* we index a local file with remote urls */)
+                .parseSiteMap(siteMapFile.toURI().toURL()));
         final ExecutorService pool = Executors.newFixedThreadPool(Integer.getInteger("talend.algolia.indexation", 256));
         final List<Future<List<JsonObject>>> updates = siteMap.getSiteMapUrls().stream().filter(url -> {
             // filter not indexed pages
             final String externalForm = url.getUrl().toExternalForm();
             return !externalForm.contains("/all-in-one") && !externalForm.contains("/index-");
-        }).map(url -> pool.submit(() -> {
-            final URL target = url.getUrl();
+        }).filter(it -> it.getUrl().toExternalForm().contains(urlMarker)).map(url -> pool.submit(() -> {
+            final String target = url.getUrl().toExternalForm();
+            final File relative = new File(siteMapFile.getParentFile(),
+                    target.substring(target.indexOf(urlMarker) + urlMarker.length()));
+            if (!relative.exists()) {
+                return Collections.<JsonObject> emptyList();
+            }
             log.debug("Indexing {}", target);
             try {
-                final String urlStr = target.toExternalForm();
-                final Document document = Jsoup.connect(urlStr).get();
+                final Document document = Jsoup.parse(String.join("\n", Files.readAllLines(relative.toPath())));
                 final JsonObjectBuilder builder = factory.createObjectBuilder();
                 builder
                         .add("lang", "en")
@@ -115,7 +103,7 @@ public class AlgoliaIndexation {
                                 ofNullable(document.title()).filter(t -> !t.isEmpty()).orElseGet(
                                         () -> document.getElementsByTag("h1").text()))
                         .add("version", document.select("div.navigation" + "-container").attr("data-version"))
-                        .add("url", urlStr)
+                        .add("url", target)
                         .add("date", new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss'Z'") {
 
                             {
@@ -125,21 +113,26 @@ public class AlgoliaIndexation {
                         .add("timestamp", url.getLastModified().getTime());
                 IntStream.rangeClosed(0, 3).forEach(i -> select(document, factory, ".doc " + "h" + (i + 1))
                         .ifPresent(value -> builder.add("lvl" + i, value)));
-                builder.add("objectID", Base64.getEncoder().encodeToString(DigestUtils.sha1(urlStr)));
-
-                final JsonObject base = builder.build();
 
                 final Elements texts = document.select(".doc p, .doc td.content, .doc th.tableblock");
                 if (texts.isEmpty()) {
-                    return singletonList(base);
+                    return singletonList(builder.build());
                 }
 
-                return texts
-                        .stream()
-                        .map(Element::text)
-                        .map(v -> factory.createObjectBuilder(base).add("text", v).build())
-                        .collect(toList());
-            } catch (final IOException e) {
+                /*
+                 * was for algolia but no more needed, keeping in case we want to resplit for the same reason
+                 * return texts
+                 * .stream()
+                 * .map(Element::text)
+                 * .map(v -> factory.createObjectBuilder(base).add("text", v).build())
+                 * .collect(toList());
+                 */
+                return singletonList(builder
+                        .add("text",
+                                texts.stream().map(Element::text).collect(Collector.of(factory::createArrayBuilder,
+                                        JsonArrayBuilder::add, JsonArrayBuilder::addAll)))
+                        .build());
+            } catch (final Exception e) {
                 log.warn(target + ": " + e.getMessage());
                 return Collections.<JsonObject> emptyList();
             }
@@ -155,60 +148,27 @@ public class AlgoliaIndexation {
             }
         });
 
-        final ObjectMapper mapper = new ObjectMapper().enable(JsonGenerator.Feature.AUTO_CLOSE_JSON_CONTENT).disable(
-                DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES);
-        final APIClient client = new ApacheAPIClientBuilder(args[1], args[2])
-                .setObjectMapper(mapper)
-                .setBuildHosts(((Supplier<List<String>>) () -> { // bug in the lib
-                    final List<String> hosts = new ArrayList<>(4);
-                    hosts.addAll(IntStream.rangeClosed(1, 3).mapToObj(i -> args[1] + "-3." + ALGOLIANET_COM).collect(
-                            toList()));
-                    Collections.shuffle(hosts);
-                    hosts.add(0, args[1] + "." + ALGOLIA_NET);
-                    return hosts;
-                }).get())
-                .build();
-        final Index<JsonNode> index = client.initIndex("githubantora", JsonNode.class);
-        index.setSettings(new IndexSettings()
-                .setSearchableAttributes(asList("title", "unordered(lvl0)", "unordered(lvl1)", "unordered(lvl2)",
-                        "unordered(lvl3)", "unordered(text)"))
-                .setAttributesForFaceting(asList("lang", "version")));
-        try {
-            final List<JsonNode> collect = updates.stream().map(future -> {
+        try (final Jsonb jsonb = JsonbBuilder.create()) {
+            updates.stream().map(f -> {
                 try {
-                    return future.get();
+                    return f.get();
                 } catch (final InterruptedException | ExecutionException e) {
-                    return null;
-                }
-            })
-                    .filter(Objects::nonNull)
-                    .flatMap(Collection::stream)
-                    .map(JsonValue::asJsonObject)
-                    .map(JsonObject::toString)
-                    .map(json -> {
-                        try {
-                            return mapper.readTree(json);
-                        } catch (final IOException e) {
-                            throw new IllegalArgumentException(e);
-                        }
-                    })
-                    .collect(toList());
-            if (collect.size() == 0) {
-                throw new IllegalStateException("No data to index!");
-            }
-            log.info("{} records to index", collect.size());
-            final int batchSize = Integer.getInteger("talend.algolia.batchSize", 1000);
-            final AtomicInteger counter = new AtomicInteger();
-            collect.stream().collect(groupingBy(i -> counter.getAndIncrement() / batchSize)).values().forEach(chunk -> {
-                try {
-                    index.saveObjects(chunk);
-                } catch (final AlgoliaException e) {
                     throw new IllegalStateException(e);
                 }
-            });
-            log.info("Index updated, {} #records", collect.size());
-        } finally {
-            client.close();
+            })
+                    .flatMap(Collection::stream)
+                    .sorted(comparing(o -> o.getString("title")))
+                    .collect(groupingBy(o -> o.getString("version")))
+                    .forEach((version, records) -> {
+                        final File file =
+                                new File(siteMapFile.getParentFile(), "main/" + version + "/search-index.json");
+                        try (final OutputStream output = new WriteIfDifferentStream(file)) {
+                            jsonb.toJson(records, output);
+                        } catch (final IOException e) {
+                            throw new IllegalStateException(e);
+                        }
+                        log.info("Created {}", file);
+                    });
         }
     }
 
